--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <button onclick="topFunction()" id="myBtn" >UP</button>
+    <button onclick="topFunction()" id="myBtn" class="fas fa-arrow-up"></button>
     <nav class="navbar navbar-expand-sm navbar-light mb-1 ml-5">
         <ul class="navbar-nav">
             <li class="nav-item">
