--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <--darkmode wala div using js ends-->
 
-    <button onclick="topFunction()" id="myBtn" class="fas fa-arrow-up"></button>
+    <button onclick="topFunction()" id="myBtn" class="fas fa-arrow-up">UP</button>
     <nav class="navbar navbar-expand-sm navbar-light mb-1 ml-5">
         <ul class="navbar-nav">
             <li class="nav-item">
