--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title >Jay Parmar</title>
     
-    <link rel="shortcut icon" href="Jaylogo.png"/> 
+    <link rel="shortcut icon" href="websiteflaticon.png"/> 
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
