--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!--darkmode wala div using js->
+    <!--darkmode div using js->
     <div>
         <input type="checkbox" class="checkbox" id="chk" />
         <label class="label" for="chk">
@@ -25,7 +25,7 @@
             <div class="ball"></div>
         </label>
     </div>
-    <--darkmode wala div using js ends-->
+    <--darkmode div using js ends-->
 
     <button onclick="topFunction()" id="myBtn" class="fas fa-arrow-up"></button>
     <nav class="navbar navbar-expand-sm navbar-light mb-1 ml-5">
@@ -81,9 +81,9 @@
                                 <li><a href="https://www.instagram.com/ig_jayparmar/">
                                     <ion-icon name="logo-instagram"></ion-icon>
                                     </a></li>
-                                <!-- <li><a href="https://dev.to/_jp_000">
+                                <li><a href="https://myblogmain31070.gatsbyjs.io/">
                                     <ion-icon name="logo-medium"></ion-icon>
-                                    </a></li> -->
+                                    </a></li>
                                
                             </ul>
                         </div>
@@ -256,9 +256,9 @@
                                     <li><a href="https://www.instagram.com/ig_jayparmar/">
                                         <ion-icon name="logo-instagram"></ion-icon>
                                         </a></li>
-                                    <!-- <li><a href="https://dev.to/_jp_000">
+                                    <li><a href="https://myblogmain31070.gatsbyjs.io/">
                                         <ion-icon name="logo-medium"></ion-icon>
-                                        </a></li> -->
+                                        </a></li>
                                    
                                 </ul>
                             </div>
