updated linkedin link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <li><a href="https://github.com/jay-2000">
                                         <ion-icon name="logo-github"></ion-icon>
                                     </a></li>
-                                <li><a href="https://www.linkedin.com/in/jay-parmar-3755501a1/">
+                                <li><a href="https://www.linkedin.com/in/jay-r-parmar/">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                                 </a></li>
@@ -247,7 +247,7 @@
                                     <li><a href="https://github.com/jay-2000">
                                             <ion-icon name="logo-github"></ion-icon>
                                         </a></li>
-                                    <li><a href="https://www.linkedin.com/in/jay-parmar-3755501a1/">
+                                    <li><a href="https://www.linkedin.com/in/jay-r-parmar/">
                                             <ion-icon name="logo-linkedin"></ion-icon>
                                         </a></li>
                                     <li><a href="https://twitter.com/_Jaystwt">
