--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!--darkmode wala div using js->
+    <!--darkmode div using js->
     <div>
         <input type="checkbox" class="checkbox" id="chk" />
         <label class="label" for="chk">
@@ -25,13 +25,13 @@
             <div class="ball"></div>
         </label>
     </div>
-    <--darkmode wala div using js ends-->
+    <--darkmode div using js ends-->
 
     <button onclick="topFunction()" id="myBtn" class="fas fa-arrow-up"></button>
     <nav class="navbar navbar-expand-sm navbar-light mb-1 ml-5">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://drive.google.com/file/d/13Q01KOZ0U-8linIrFZkEQKI3JAQmVK2v/view?usp=sharin" target="_blank">Resume++</a>
+                <a class="nav-link" href="https://drive.google.com/file/d/1-pQdsfoh9ITvDMsgdQ_Nyps-0PbwEWJb/view?usp=sharing" target="_blank">Resume++</a>
             </li>
             
         </ul>
