FIX: Minor skillbar change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-8 text-left pb-5">
                     <h1 class="display-3">Jay Parmar</h1>
                     <p class="lead pl-2">
-                        Budding Software Developer
+                        DevOps Engineer
                     </p>
                 </div>
                 <div class="col-lg-4 text-center my-auto pb-5 rounded-circle"><img class="img-fluid rounded-circle"
@@ -60,8 +60,8 @@
                         <h1 class="bold-text">About</h1>
                         <div class="pt-5">
                             <h2 class="mb-5">Hello!</h2>
-                            <p>My name is Jay. I’m a junior from India I'm an open-source enthusiast, a learner 📕I'm deeply passionate about software development & innovations. 
-                                I believe in the power of community of Software Development 
+                            <p>My name is Jay. I’m a DevOps Engineer from India I'm an open-source enthusiast, a learner 📕I'm deeply passionate about software development & innovations. 
+                                I believe in the power of community of Software Development and DevOps
                             </p>
 
                             <ul class="social-links list-unstyled mt-4">
@@ -75,7 +75,7 @@
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
                                 </a></li>
-                                <li><a href="https://twitter.com/_Jaystwt">
+                                <li><a href="https://x.com/_Jaystwt">
                                         <ion-icon name="logo-twitter"></ion-icon>
                                     </a></li>
                                 <li><a href="https://www.instagram.com/ig_jayparmar/">
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>HTML5</h4>
+                                <h4>LINUX</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
                                         aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>CSS3</h4>
+                                <h4>DOCKER</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
                                         aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -116,7 +116,7 @@
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>JavaScript</h4>
+                                <h4>SHELL</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
                                         aria-valuemin="0" aria-valuemax="100" style="width:75%">
